tests/error/linear_errors/variant_unused_field.err
Error: Drop violation (at $FILE:13:4)
   | 
11 | @guppy
12 | def foo() -> qubit:
13 |     e = MyEnum.VariantA(qubit(), qubit())
   |     ^ Variable `e` with non-droppable type `MyEnum` is leaked

Help: Make sure that `e` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
